@@ -28,6 +28,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17353: Plistlib emitted empty data tags with deeply nested datastructures
+
 - Issue #11714: Use 'with' statements to assure a Semaphore releases a
   condition variable.  Original patch by Thomas Rachel.
 
